Updating a styling issues on smaller devices.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,9 +51,11 @@
   .wrapper {
     flex-direction: row;
   }
+  .blog {
+    padding: 0 5em;
+  }
 }
 
 .blog {
   flex-grow: 1;
-  padding: 0 5em;
 }
